<resources>
    <string name="app_name">Final</string>
    <!-- Strings related to login -->
    <string name="prompt_name">User name</string>
    <string name="prompt_password">Password</string>

    <string name="change_old_password">Old Password</string>
    <string name="change_new_password">New Password</string>
    <string name="change_new_password2">Repeat New Password</string>

    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_weather">Weather</string>

    <string name="title_home">Map</string>
    <string name="title_weather">Weather</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
