<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!--地图(home)、天气、历史和设置 -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.afinal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.afinal.ui.dashboard.DashboardFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.afinal.ui.notifications.NotificationsFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.afinal.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>